# OpenPFGW

./: Authors  BuildLog.htm  ChangeLog  ChangeLog.txt  Doxyfile  Doxyweb  INSTALL  LICENSE  MANIFEST  Makefile.in  Makefile.mingw  News_PFGW_Version_1_2  News_PFGW_Version_1_3.txt  OPENPFGW  PFGW.INI  RELNOTES  TestBase.h  UpgradeLog.XML  WinCopy.cpp  WinCopy.vcproj  WinCopy.vcproj.8.00.old  acconfig.h  arg4.awk  config.h  config.h.in  configure  configure.in  linpfgw.pl  make.inc  makefile  mingw.patch  mk-zip.bat  network2format.txt  networkformat.txt  openpfgw.opt  openpfgw.sln  openpfgw.sln.old  openpfgw.suo.old  openpfgw.vcproj  openpfgw.vcproj.8.00.old  (+16 more)
distribution/: News_PFGW_Version_3.1.txt  News_PFGW_Version_3.2.txt  RELNOTES  ccfileformat.txt  pfgwdoc.txt  release_notes.txt  scriptfileformat.txt
dox/: README  header.html  mainpage.dox
pfconfig/headers/: README.headers  config.h  pfglue.h  pfgwlib.h  pfio.h  pflib.h  pfmath.h  pfoo.h  prmsieve.h  stdtypes.h
pfconfig/objects/: README
pform/: README  main.cpp
pform/PFGW_ServerV2/: ClientData.h  FileStruct.h  PFGW_ServerV2.clw  PFGW_ServerV2.cpp  PFGW_ServerV2.h  PFGW_ServerV2.rc  PFGW_ServerV2.vcproj  PFGW_ServerV2.vcproj.8.00.old  PFGW_ServerV2Dlg.cpp  PFGW_ServerV2Dlg.h  Proth-Timings.txt  StdAfx.cpp  StdAfx.h  clientdata.cpp  clientgrid.cpp  clientgrid.h  ini.cpp  ini.h  min_pfio.cxx  pfgw_globals.cxx  pfgw_serverv2.rc2  resource.h  zlib.cxx
pform/pfglue/: ChangeLog  Makefile.in  README  _pfglue.h  asmimport.h  configure  configure.in  glue.h  makefile  pfglue.sln  pfglue.vcproj  pfglue.vcproj.8.00.old  pfglue.vcxproj  pfglue.vcxproj.filters  pfgluepch.h  pfutil.cpp  pfutil.h  primegen.c  primegen.h  primegen_init.c  primegen_next.c  primegen_skip.c  primegenerator.cpp  primegenerator.h  recip.cpp  recip.h
pform/pfglue/debug/: BuildLog.htm
pform/pfglue/release/: BuildLog.htm
pform/pfgw/: ChangeLog  Makefile.in  aclocal.m4  bench.cpp  configure  configure.in  gf_factorize.cpp  gfn_prp.cpp  gmp_mem.cxx  gw_gapper.cpp  gw_prp.cpp  jbc.cxx  makefile  newmain.cpp  pfgw.sln  pfgw.vcproj  pfgw.vcproj.8.00.old  pfgw.vcxproj  pfgw.vcxproj.filters  pfgw_globals.h  pfgw_main.cpp  pfgw_version.h  phi_prp.cpp  primeformpch.h  save_restore_prp.cpp
pform/pfgwlib/: ChangeLog  LICENSE  Makefile.in  README  _pfgwlib.h  asmexp.h  asmimp.h  configure  configure.in  gwcontext.cpp  gwcontext.h  gwinteger.cpp  gwinteger.h  gwinteger.inl  makefile  nasmrule.in  pfgwlib.sln  pfgwlib.vcproj  pfgwlib.vcproj.8.00.old  pfgwlib.vcxproj  pfgwlib.vcxproj.filters  pfgwlibpch.h
pform/pfio/: ChangeLog  Makefile.in  _pfio.h  cmpr_x_bit.cxx  configure  configure.in  makefile  pfabc2file.cpp  pfabc2file.h  pfabcdfile.cpp  pfabcdfile.h  pfabcfile.cpp  pfabcfile.h  pfabctaskcompleted.cpp  pfabctaskcompleted.h  pfccfile.cpp  pfccfile.h  pfcheckfile.cpp  pfcheckfile.h  pfconsoleoutput.cpp  pfcpapfile.cpp  pfcpapfile.h  pfdecimalfile.cpp  pfdecimalfile.h  pffile.cpp  pffile.h  pffilesymbol.cpp  pffilesymbol.h  pfgw_zlib.h  pfini.cpp  pfini.h  pfini.inl  pfio.sln  pfio.vcproj  pfio.vcproj.8.00.old  pfio.vcxproj  pfio.vcxproj.filters  pfiopch.h  pfnetworkfile.cpp  pfnetworkfile.h  (+20 more)
pform/pflib/: ChangeLog  Makefile.in  _pflib.h  bmap.cxx  bpfsystem.cpp  bpfsystem.h  configure  configure.in  crc32.cpp  crc32.h  erat_mod.cpp  erat_mod.h  ipfsymbol.cpp  ipfsymbol.h  ipfsystem.cpp  ipfsystem.h  listbase.h  makefile  pfarray.h  pfboolean.cpp  pfboolean.h  pfbuffer.h  pfcircularbuffer.cpp  pfcircularbuffer.h  pffastbuffer.h  pfforwarditerator.cpp  pfforwarditerator.h  pflib.sln  pflib.vcproj  pflib.vcproj.8.00.old  pflib.vcxproj  pflib.vcxproj.filters  pflibpch.cpp  pflibpch.h  pflist.cpp  pflist.h  pflistnode.cpp  pflistnode.h  pfptrarray.h  pfqueue.h  (+8 more)
pform/pfmath/: ChangeLog  Makefile.in  _pfmath.h  configure  configure.in  fp_stchk.h  gmp_dynamic.cpp  gmp_dynamic.h  integer.cpp  integer.h  integer.inl  lconfig.win  makefile  mod.asm  nasmrule.in  pfmath.sln  pfmath.vcproj  pfmath.vcproj.8.00.old  pfmath.vcxproj  pfmath.vcxproj.filters  pfmathpch.h
pform/pfoo/: ChangeLog  Makefile.in  _pfoo.h  algebra.cpp  algebra.h  configure  configure.in  exponentiation.cpp  exponentiation.h  exponentiator.cpp  exponentiator.h  expr.cpp  expr.h  f_binomial.cpp  f_binomial.h  f_copeland-erdos.cpp  f_copeland-erdos.h  f_cyclotomic.cpp  f_cyclotomic.h  f_decimal.cpp  f_decimal.h  f_endminus1.cpp  f_endminus1.h  f_endplus1.cpp  f_endplus1.h  f_factor.cpp  f_factor.h  f_fibonacci.cpp  f_fibonacci.h  f_gcd.cpp  f_gcd.h  f_if.cpp  f_if.h  f_issquare.cpp  f_issquare.h  f_length.cpp  f_length.h  f_nextprime.cpp  f_nextprime.h  f_prevprime.cpp  (+61 more)
pform/pfoo/debug/: BuildLog.htm
pform/pfoo/release/: BuildLog.htm
pform/primesieve/: Erat.cpp  PreSieve.cpp  makefile  primesieve.vcxproj  primesieve.vcxproj.filters
pform/prmsieve/: ChangeLog  Makedefs  Makedefs.g++  Makedefs.gcc  Makedefs.in  Makedefs.old  Makefile.in  Makefile.old  OPENPFGW  README  _prmsieve.h  aclocal.m4  configure  configure.in  makefile  prmsieve.sln  prmsieve.vcproj  prmsieve.vcproj.8.00.old  prmsieve.vcxproj  prmsieve.vcxproj.filters  prmsieve_local.h
pform/winpfgw/: AboutDlg.cxx  ChangeLog  MessageDialog.cpp  MessageDialog.h  PFGW.INI  RangeCompleteDlg.cpp  RangeCompleteDlg.h  SUBCLASS.CPP  SUBCLASS.H  SmartEditField.cpp  SmartEditField.h  StdAfx.cpp  StdAfx.h  TextViewerDlg.cpp  TextViewerDlg.h  Trayicon.cpp  Trayicon.h  WinBloz_msg.h  WinPFGW.aps  WinPFGW.clw  WinPFGW.cpp  WinPFGW.h  WinPFGW.ncb  WinPFGW.rc  WinPFGW.rc2  WinPFGW.sln  WinPFGW.vcproj  (+8 more)
spider/: README  cvsprune.pl  fsplice.pl  mkdev.sh  mksta.sh  qdev.sh
test/: 12  1200#p  2#12000p  2#3200p  2^10000p  7500#p  big_lucus.txt  caldwell.pl  fermatfactors.txt  pfgw.ini  test00.txt  test01.txt  test02.txt  test03.txt  test04.txt  test05.txt  test06.txt  test07.txt  test08.txt  test09.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test20.txt  test21.txt  test22.txt  test23.txt  test24.txt  test25.txt  test26.txt  test27.txt  test28.txt  test29.txt  (+26 more)
(+92 files in other folders)
