dnl =======================================================
dnl pform/pfoo/configure.in
dnl version 07/18/2004
dnl (Ulrich Thiel)
dnl =======================================================

AC_INIT(pfoopch.h)

dnl =======================================================
dnl initialize compiler flags
dnl =======================================================
if test "$CFLAGS" = ""; then
    AC_SUBST(CFLAGS, "-s -O2")
fi

if test "$CXXFLAGS" = ""; then
    AC_SUBST(CXXFLAGS, "-s -O2")
fi

dnl =======================================================
dnl initialize compilers
dnl ======================================================= 
AC_PROG_CC
AC_PROG_CC_C_O
AC_PROG_CXX

dnl =======================================================
dnl debug symbols
dnl =======================================================
if test "$enable_debugsym" = "yes"; then
	CFLAGS="$CFLAGS -g"
	CXXFLAGS="$CXXFLAGS -g"
fi

dnl =======================================================
dnl pfgw default flags
dnl =======================================================
if test "$enable_defaultflags" = ""; then
    enable_defaultflags="yes"
fi
    
if test "$enable_defaultflags" = "yes"; then
    
    dnl Get defaults
    PFGW_GETDEFAULT_FLAGS

    dnl Check they work
    PFGW_CHECKDEFAULT_FLAGS

    dnl Apply them
    PFGW_APPLY_FLAGS
fi

dnl =======================================================
dnl AR and LD
dnl =======================================================
AC_PROG_RANLIB
AC_PROG_MAKE_SET

AC_CHECK_TOOL(AR,ar,:)
AC_CHECK_TOOL(LD,ld,:)

if test "$AR" = ":"
	then AC_MSG_ERROR("ar is required")
	else ARFLAGS="rc"
fi

AC_SUBST(ARFLAGS)

dnl =======================================================
dnl dependencies (not needed at the moment)
dnl =======================================================
echo "# This is a dummy dependency file generated by configure." > deps.d

dnl =======================================================
dnl output
dnl =======================================================
AC_OUTPUT(Makefile)
